fixed layout issues with repsonsiveness

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ body {
   color: #252422;
   margin: 10px auto;
   font-size: large;
-
+  text-align: center;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 
   background: #f6efe5;
@@ -284,6 +284,9 @@ button {
   background-repeat: no-repeat;
   justify-content: center;
   text-align: center;
+
+  padding: 10px;
+  margin: 10px;
 }
 
 /* For screens smaller than 768px */
@@ -344,6 +347,10 @@ button {
   .techcard {
     height: 100px;
   }
+
+  .bgimg {
+    height: 30vh;
+  }
 }
 
 /* For screens larger than 768px */
@@ -351,6 +358,10 @@ button {
   body {
     width: 90%;
     margin: 10px auto;
+  }
+
+  .bgimg {
+    height: 50vh;
   }
 
   nav li {
